2001-06-13  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-column-view.c: more libglade work

2001-06-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/glade/report.glade: new file for old report dialogs

	* src/gnome/dialog-column-view.c: use libglade

2001-06-13  Bill Gribble  <grib@billgribble.com>

	* src/sc/qif-import/qif-guess-map.scm: fix bug in 
	account name guessing 

2001-06-12  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-price-editor.c: fix bug

	* src/gnome/glade/price.glade: new file for old price dialogs

	* src/gnome/dialog-price-editor.c: use libglade

	* src/gnome/reconcile-list.c: obey new option below

	* src/scm/prefs.scm: add option wrt checking off cleared
	transactions when reconciling

	* src/register/table-allgui.[ch]: move function to .c file

	* src/scm/tip-list.scm: update tip

	* src/register/register-common.h: move function defs to
	register-common.c

	* src/register/register-common.c: new file

	* src/gnome/glade/Makefile.am: new file

	* src/gnome/glade/commodity.glade: new file. glade file for
	commodity dialog

	* src/gnome/dialog-commodities.c: use libglade

	* src/gnome/dialog-utils.c (gnc_glade_xml_new): new func
	(gnc_glade_xml_new_widget): new func

	* rpm/gnucash.spec.in: add glade dir

	* configure.in: move libglade check to glade section.
	add configured glade file dir.

	* src/gnome/Makefile.am: add glade flags & glade dir

	* src/Makefile.am: add glade libs

	* src/scm/report/account-piecharts.scm: same as below

	* src/scm/report/category-barchart.scm: remove hint text

	* src/engine/gnc-book.c (gnc_book_get_file_lock): some filesystems
	don't support hard links. If the error code indicates this, go
	ahead and grant the lock. Is there a better way?

2001-06-11  Dave Peticolas  <dave@krondo.com>

	* src/register/gnome/gnucash-date-picker.c
	(gnc_date_picker_key_event): fix bug

	* src/scm/Makefile.am: same as below

	* src/scm/price-quotes.scm: same as below
